--- a/index.html
+++ b/index.html
@@ -61,15 +61,9 @@
     </style>
   </head>
   <body>
-    <div class="slideshow-container">
-      <img src="IMG-20230301-WA0053.jpg" class="slides">
-      <img src="Snapchat-1682214205.jpg" class="slides">
-      <img src="Snapchat-1811806099.jpg" class="slides">
-    </div>
-    
-    <button class="prev" onclick="plusSlides(-1)">Previous</button>
-    <button class="next" onclick="plusSlides(1)">Next</button>
     <h1 id="message"></h1>
+    <div id="text">It was soo difficult spending time without talking to you</div>
+
     <button id="button">Click hehe...</button>
     <audio id="music" src="Ambarsariya 128 Kbps (mp3cut.net).mp3"></audio>
     <script>
